--- a/.github/workflows/python_app.yml
+++ b/.github/workflows/python_app.yml
@@ -27,6 +27,8 @@ jobs:
         uses: abatilo/actions-poetry@v2
         with:
           poetry-version: ${{ matrix.poetry-version }}
+      - name: Setup
+        run: chmod +x ./scripts/setup.sh && ./scripts/setup.sh sample
       - name: Install dependencies
         run: poetry install --no-interaction
       - name: Run pytest
