--- a/.github/workflows/python_app.yml
+++ b/.github/workflows/python_app.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.9", "3.10", "3.11"]
         poetry-version: ["1.2.2"]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
@@ -36,4 +36,4 @@ jobs:
       - name: Run lint
         run: poetry run flake8 core/ tests/
       - name: Run formatter
-        run: poetry run black --diff --check
+        run: poetry run black --diff --check .
